--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ for(i=0;i<0;i++){
 　
 }
   for(i=0;i<10;i++){
-　document.write('<img src="toast/00' + i + '.png" />);
+　document.write('<img src="toast/00' + i + '.png" />');
 }
   for(i=0;i<27;i++){
-　document.write('<img src="toast/0' + i + '.png" />);
+　document.write('<img src="toast/0' + i + '.png" />');
 }
 </script>
